--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,6 +7,12 @@ body {
     background-color: rgb(175, 104, 241);
 }
 
+.lado {
+
+    float: right;
+
+}
+
 main {
     background-color: white;
     width: 500px;
